# routes/auth.js
@@ -1,32 +1,37 @@
 const router = require("express").Router();
 const passport = require("../lib/passport");
-const jwt = require("jsonwebtoken");
-const { login } = require("../controllers/auth.controller");
+const auth = require("../controllers/auth.controller");
 
-router.get("/login", (req, res) => {
-  res.render("auth/login");
-});
-router.post("/login", passport.authenticate("local", {}), (req, res) => {
-  // Token
-  const token = jwt.sign(
-    { id: req.user.id, username: req.user.username },
-    process.env.JWT_SECRET
-  );
-  res.json({
-    token: token,
-  });
-});
-router.post("/logout", function (req, res, next) {
-  req.logout(function (err) {
-    if (err) {
-      return next(err);
-    }
-    res.redirect("/login");
-  });
-});
+//API AUTH
+router
+  .post("/api/auth/login", passport.authenticate("local", {}), auth.login)
+  .post("/api/auth/register", auth.register)
+  .post("/api/auth/logout", function (req, res, next) {
+    req.logout(function (err) {
+      if (err) {
+        return next(err);
+      }
+      res.redirect("/login");
+    });
+  })
+  .post("/api/auth/send-reset-password", auth.sendResetPassword)
+  .post("/api/auth/new-password", auth.newPassword);
 
-router.get("/register", (req, res) => {
-  res.render("auth/register");
-});
+//VIEW
+router
+  .get("/login", (req, res) => {
+    res.render("auth/login");
+  })
+
+  .get("/register", (req, res) => {
+    res.render("auth/register");
+  })
+  .get("/reset-password", (req, res) => {
+    res.render("auth/resetPassword");
+  })
+
+  .get("/new-password", (req, res) => {
+    res.render("auth/newPassword");
+  });
 
 module.exports = router;
